--- a/6_MachineLearning/DecisionTrees.ipynb
+++ b/6_MachineLearning/DecisionTrees.ipynb
@@ -2,13 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 23,
    "id": "47d66dfb-9f7f-4151-81cb-d53cb7cfabb4",
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn import tree\n",
     "import pandas as pd\n",
+    "import numpy as np\n",
+    "import math\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "%matplotlib inline"
@@ -16,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "24ba9a1f-9e4b-4266-aaa6-3ed73de73efe",
    "metadata": {},
    "outputs": [
@@ -29,7 +31,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -46,15 +48,67 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9c7b4924-bbd0-4c8d-954d-b174197973f5",
+   "id": "b97df2a7-ac00-4211-b938-44a385d4a481",
    "metadata": {},
    "source": [
-    "### Решающие деревья"
+    "# Теория"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "48988eed-0d08-4cff-9af2-d3c0e64d7d9b",
+   "metadata": {},
+   "source": [
+    "- энтропия - уровень неопределенности в наших данных. Максимальная степень неопределенности - энтропия равна 1, минимальна неопределенность - энтропия равна 0\n",
+    "\n",
+    "$$\n",
+    "f(x) = -\\sum_{i=1}^np_i*log_2(p_i)\n",
+    "$$\n",
+    "$$\n",
+    "p_i - \\text {вероятность отнесения конкретного наблюдения к одному из n целевых классов}\n",
+    "$$\n",
+    "\n",
+    "- чем больше дисбалланс классов в листе дерева после разделения - тем меньше энтропия (вероятность отнесения к одному из классов стремится к 0 или 1).\n",
+    "\n",
+    "\n",
+    "- Entropy reduction - снижение энтропии\n",
+    "- Information gane - насколько уменьшилась исходная энтропия при разделении данных по какому-то критерию\n",
+    "\n",
+    "$$\n",
+    "IG = E(Y) - E(Y|X)\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "E(Y|X) = \\dfrac{n_2}{N} * E_1 + \\dfrac{n_1}{N} * E_2\n",
+    "$$\n",
+    "\n",
+    "$N - \\text{общее число наблюдений до разбиения}$\n",
+    "\n",
+    "$n_1 - \\text{число наблюдений в первой группе после разбиения}$\n",
+    "\n",
+    "$n_2 - \\text{число наблюдений во второй группе после разбиения}$\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7efc2265-8ee7-4f23-86bc-c5fef4a36a7c",
+   "metadata": {},
+   "source": [
+    "# Практика"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d9506131-9b61-42be-bd40-26af61ee9fca",
+   "metadata": {},
+   "source": [
+    "## 1. Stepik - karpov\n",
+    "https://stepik.org/lesson/209690?unit=183194"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "id": "205a63e7-ff79-48d7-8647-207446347b31",
    "metadata": {},
    "outputs": [
@@ -91,77 +145,28 @@
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
        "   X_1  X_2  Y\n",
-       "0    1    0  1\n",
-       "1    1    0  1\n",
-       "2    1    0  1\n",
-       "3    0    1  1\n",
-       "4    0    0  0\n",
-       "5    0    0  0\n",
-       "6    0    0  0\n",
-       "7    1    1  0"
+       "0    1    0  1"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "data = pd.DataFrame({'X_1': [1, 1, 1, 0, 0, 0, 0, 1], 'X_2': [0, 0, 0, 1, 0, 0, 0, 1], 'Y': [1, 1, 1, 1, 0, 0, 0, 0]})\n",
-    "data"
+    "data.head(1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "id": "a5589541-f99e-46b3-bc84-dde961903c00",
    "metadata": {},
    "outputs": [
@@ -184,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "id": "ea46b447-858e-44da-b1d0-0de656602530",
    "metadata": {},
    "outputs": [
@@ -316,6 +321,93 @@
     "graph = Source(tree.export_graphviz(clf, out_file=None, feature_names=list(X), \n",
     "                                    class_names=['Negative', 'Positive'], filled=True))\n",
     "display(SVG(graph.pipe(format='svg')))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "e8635fa0-4b95-420c-b6f0-823d172eafb5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cat_dogs_df_1 = pd.read_csv(\"https://stepik.org/media/attachments/course/4852/dogs.csv\", index_col='Unnamed: 0')\n",
+    "cat_dogs_df_2 = pd.read_csv(\"https://stepik.org/media/attachments/course/4852/cats.csv\", index_col='Unnamed: 0')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "id": "7b2fa9b8-56f3-46e9-9d5d-b7e971449c06",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.0\n",
+      "Information gain для Шерстист: 0.0\n",
+      "Information gain для Гавкает: 1.0\n",
+      "Information gain для Лазает по деревьям: 1.0\n",
+      "0.9709505944546686\n",
+      "Information gain для Шерстист: 0.08\n",
+      "Information gain для Гавкает: 0.61\n",
+      "Information gain для Лазает по деревьям: 0.97\n",
+      "Шерстист\n",
+      "0.0 0.99\n",
+      "Гавкает\n",
+      "0.0 0.72\n",
+      "Лазает по деревьям\n",
+      "0.0 0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "def entropy_calc(df: pd.DataFrame, target_column: str):\n",
+    "    entropy = 0\n",
+    "    target_values = df[f'{target_column}'].unique()\n",
+    "    for value in target_values:\n",
+    "        prob = len(df.loc[df[f'{target_column}'] == value]) / len(df)\n",
+    "        entropy += -prob * math.log(prob, 2)\n",
+    "    return entropy\n",
+    "\n",
+    "def information_gane_calc(df: pd.DataFrame, target_column: str, split_column: str):\n",
+    "    entropy_start = entropy_calc(df, target_column)\n",
+    "    unique_values = sorted(df.loc[:, f'{split_column}'].unique())\n",
+    "    probs_entropy = 0\n",
+    "    for idx, val in enumerate(unique_values[:-1]):\n",
+    "        part_df = df.loc[(df[split_column] >= unique_values[idx]) & (df[split_column] < unique_values[idx+1])]\n",
+    "        probs_entropy += len(part_df) * entropy_calc(part_df, target_column=target_column) / len(df)\n",
+    "    part_df = df.loc[df[split_column] >= unique_values[-1]]\n",
+    "    probs_entropy += len(part_df) * entropy_calc(part_df, target_column=target_column) / len(df)\n",
+    "    return entropy_start - probs_entropy\n",
+    "    \n",
+    "# entropy_left = ecnropy_calc(df.loc[df['split_column']])\n",
+    "    # entropy_fin = \n",
+    "\n",
+    "print(entropy_calc(cat_dogs_df_1, 'Вид'))\n",
+    "for col in ['Шерстист', 'Гавкает', 'Лазает по деревьям']:\n",
+    "    print(f\"Information gain для {col}: {information_gane_calc(cat_dogs_df_1, 'Вид', col)}\")\n",
+    "\n",
+    "print(entropy_calc(cat_dogs_df_2, 'Вид'))\n",
+    "for col in ['Шерстист', 'Гавкает', 'Лазает по деревьям']:\n",
+    "    print(f\"Information gain для {col}: {round(information_gane_calc(cat_dogs_df_2, 'Вид', col), 2)}\")\n",
+    "\n",
+    "\n",
+    "#Энтропия при разделении по фиче Шерстист в группах, где Шерстист равно 0 и 1\n",
+    "#Энтропия при разделении по фиче Гавкает в группах, где Гавкает равно 0 и 1 соответственно, составляет\n",
+    "#Энтропия при разделении по фиче Лазает по деревьям в группах, где эта фича равна 0 и 1 соответственно, составляет\n",
+    "for col in ['Шерстист', 'Гавкает', 'Лазает по деревьям']:\n",
+    "    print(col)\n",
+    "    print(round(entropy_calc(cat_dogs_df_2.loc[cat_dogs_df_2[col] == 0], 'Вид'), 2), \n",
+    "          round(entropy_calc(cat_dogs_df_2.loc[cat_dogs_df_2[col] == 1], 'Вид'), 2))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1b4e8770-0cfa-4309-b4cd-cbf651c5abaf",
+   "metadata": {},
+   "source": [
+    "## 2. ..."
    ]
   }
  ],
