--- a/8_Docker/Docker.ipynb
+++ b/8_Docker/Docker.ipynb
@@ -130,7 +130,8 @@
     "- -it - подключение к контейнеру в интерактивном режиме\n",
     "- -p host_port:docker_port\n",
     "- -v /opt/datadir:/var/lib/mysql - проброс папки - таким образом docker монтирует внешюю директорию в свою внутреннюю\n",
-    "- "
+    "- -e VAR_NAMR=VAR_VALUE\n",
+    "- --name=[name] - задает имя запускаемому контейнеру"
    ]
   },
   {
